spacing fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,21 @@
 html, body {
   margin: 0;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  width: 100%;
+  height: 100%;
   background-image: url('/images/background2.png');
   background-size: cover;
   background-repeat: no-repeat;
+  overflow-x: hidden;
 }
 
 #root {
-  margin: 0 auto;
+  width: 100%;
+  min-height: 100vh;
+  margin: 0; 
   font-family: 'Quicksand', sans-serif;
 }
+
 
 /* Navbar */
 
@@ -61,10 +66,6 @@ background-color: rgb(253, 253, 253);
 }
 
 /* Homepage */
-
-.page {
-  height: 30em;
-}
 
 .photo {
   margin: 15px;
